# odroid-development

./: LICENSE  README.md
cv_usb_example/: CMakeLists.txt  cv_capture_example.cpp  cv_usb_example.cpp
misc/: cl.hpp
openni2_example/: CMakeLists.txt  OpenNI2Grabber.h  openni2_cv.cpp  openni2_pcl.cpp
robotics setup notes/: ubuntu-14.04-robotics-ALL.notes.txt  ubuntu-14.04-robotics-C1.notes.txt.txt  ubuntu-15.04-robotics-XU4.notes.txt
serial_comms_example/: CMakeLists.txt  serial_comms_example.cpp
serial_comms_example/firmware/: firmware.ino
serial_comms_example/serial_comms_firmware/: serial_comms_firmware.ino
